--- a/style.css
+++ b/style.css
@@ -211,6 +211,18 @@ footer{
     .reset{
         font-size: 0.9rem;
     }
+    .video{
+        position: relative;
+        padding-bottom: 56.25%; /* 16:9 */
+         height: 0;
+    }
+    .video iframe{
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+    }
 }
 
 @media(max-width:496px){
